First run at adapting for colab

--- a/KujuMNIST.ipynb
+++ b/KujuMNIST.ipynb
@@ -1,6 +1,33 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Make sure GPU is enabled, go to edit->notebook settings->Hardware Accelerator GPU\n",
+    "\n",
+    "Clone Kuzushiji_MNIST repo:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git clone https://github.com/ranihorev/Kuzushiji_MNIST"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!cd /content/Kuzushiji_MNIST"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -25,6 +52,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Download dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ROOT_FOLDER = '/content/kuzu_mnist'\n",
+    "KujuMNIST_DS(ROOT_FOLDER,download=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Calculate mean and std of the dataset for normalization"
    ]
   },
@@ -43,7 +87,7 @@
     }
    ],
    "source": [
-    "trn_data = np.load('./kuzu_mnist/kmnist-train-imgs.npz')\n",
+    "trn_data = np.load('/content/kuzu_mnist/kmnist-train-imgs.npz')\n",
     "trn_data = trn_data['arr_0'] / 255\n",
     "data_mean = trn_data.mean()\n",
     "data_std = trn_data.std()\n",
@@ -80,8 +124,6 @@
     "     transforms.ToTensor(),\n",
     "     transforms.Normalize((data_mean,), (data_std,)),\n",
     "    ])\n",
-    "\n",
-    "ROOT_FOLDER = './kuzu_mnist/'\n",
     "\n",
     "trn_ds = KujuMNIST_DS(ROOT_FOLDER, train_or_test='train', download=False, tfms=transform_train)\n",
     "val_ds = KujuMNIST_DS(ROOT_FOLDER, train_or_test='test', download=False, tfms=transform_valid)\n",
@@ -896,7 +938,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
