Switch repo to personal

--- a/KujuMNIST.ipynb
+++ b/KujuMNIST.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!git clone https://github.com/ranihorev/Kuzushiji_MNIST"
+    "!git clone https://github.com/UsmannK/Kuzushiji_MNIST-colab"
    ]
   },
   {
@@ -24,7 +24,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!cd /content/Kuzushiji_MNIST"
+    "!cd /content/Kuzushiji_MNIST-colab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git checkout colab"
    ]
   },
   {
