Change cd to global

--- a/KujuMNIST.ipynb
+++ b/KujuMNIST.ipynb
@@ -24,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!cd /content/Kuzushiji_MNIST-colab"
+    "%cd /content/Kuzushiji_MNIST-colab"
    ]
   },
   {
